--- a/index.html
+++ b/index.html
@@ -365,12 +365,13 @@
       }, 500); // 加一点延迟，模拟请求过程
     });
   </script>
-    <!-- 页面底部链接 -->
-  <div style="text-align:center; margin-top:20px; font-size:13px; color:#fff;">
-    <a href="https://tierhive.com/r/E99CCFFBF1EA" target="_blank" style="color:#fff; text-decoration:underline;">
-      Hosted on TierHive Hourly VPS
-    </a>
-  </div>
+<div class="footer-link">
+  <a href="https://tierhive.com/r/E99CCFFBF1EA" target="_blank">
+    Hosted on TierHive Hourly VPS
+  </a>
+</div>
+
 </body>
 </html>
+
 
